tests/ui/type-alias-impl-trait/different_defining_uses.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_defining_uses.rs:14:13
   |
LL | fn bar() -> Foo {
   |             ^^^ expected `&str`, got `i32`
   |
note: previous use here
  --> $DIR/different_defining_uses.rs:9:13
   |
LL | fn foo() -> Foo {
   |             ^^^

error: aborting due to 1 previous error

